Thu Jan 31 15:35:21 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSObject.m ([-doesNotRecognizeSelector:]): Modified
	exception message to print out if we are an instance or a class
	object.  For example, no longer 'IvarProxy does not recognize
	initWithClass:' but rather 'IvarProxy(class) does not recognize
	initWithClass:'.
	([-doesNotRecognize:]): Idem.
	([-subclassResponsibility:]): Similar change.
	([-shouldNotImplement:]): Similar change.
	([-notImplemented:]): Similar change.

2002-01-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSIArray.h: Use array as parameter to macros.
	* Source/GSAttributedString.m: Update for GSIArray change.
	* Source/GSCountedSet.m: Update for GSIArray change.
	* Source/GSDictionary.m: Update for GSIArray change.
	* Source/GSFFCallInvocation.m: Update for GSIArray change.
	* Source/NSArchiver.m: Update for GSIArray change.
	* Source/NSConnection.m: Update for GSIArray change.
	* Source/NSFileManager.m: Update for GSIArray change.
	* Source/NSNotificationCenter.m: Update for GSIArray change.
	* Source/NSObject.m: Update for GSIArray change.
	* Source/NSPortCoder.m: Update for GSIArray change.
	* Source/NSRunLoop.m: Update for GSIArray change.
	* Source/NSSerializer.m: Update for GSIArray change.
	* Source/NSUnarchiver.m: Update for GSIArray change.

2002-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSRunLoop.h: Go back to new version.
	* Source/NSRunLoop.m: Back to new (hopefully bug-free) version ...
	fixed a fence-post error in examining descriptors.  Enabled poll()
	support if the O/S supports it.  Converted to use standard debug
	logging keyed on NSRunLoop.  Fixed poll code to call any available
	event handler when an error occurs on a descriptor.
	* configure.in: Improve check for sa_len

2002-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSIMap.h: Fix bug cleaning table and add
	option to specify type of enumerator structure externally.