@@ -1,3 +1,9 @@
+2002-01-31  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSMapTable.m:
+	* Source/NSHashTable.m: Add checks for nul tables and either log
+	warnings and be tolerant, or raise exceptions.
+
 Thu Jan 31 15:35:21 2002  Nicola Pero  <nicola@brainstorm.co.uk>
 
 	* Source/NSObject.m ([-doesNotRecognizeSelector:]): Modified
